# synocat

./: .gitignore  Makefile  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: README.md
example/sykit/ui/: config  pnpm-lock.yaml  webpack.config.js
example/sykit/ui/public/: index.html
src/: index.js
src/app_temp/background/: README.md
src/app_temp/cli/rust/ui/: Cargo.toml
src/app_temp/cli/rust/ui/src/: main.rs
src/app_temp/desktop/: README.md
src/app_temp/web/: README.md
src/cli/: index.ts  program.ts
src/commands/: add.command.ts  add.js  compile.command.ts  config.command.ts  create.command.ts  create.js  help.command.ts  image.command.ts  info.command.ts  info.js  list.command.ts  pack.command.ts  pack.js  set.command.ts  update.command.ts  validate.command.ts  validate.js
src/core/: dsm-knowledge.js  generator.js  validator.js
src/core/generators/: info.generator.ts  logo.generator.ts  privilege.generator.ts  resource.generator.ts  schema.generator.ts  script.generator.ts  synobuildconf.generator.ts
src/core/validator/: info.validator.ts  privilege.validator.ts  resource.validator.ts  scripts.validator.ts
src/data/: arch-values.data.ts  field-dependencies.data.ts  info-fields.data.ts  resource-workers.data.ts  script-lifecycle.data.ts
src/examples/cli/: README.md
src/examples/container/: README.md
src/infra/: fs.ts  logger.ts  updater.ts
src/services/: pack.service.ts  scaffold.service.ts  validator.service.ts
src/types/: answer.type.ts  dsm.type.ts  index.ts  result.type.ts  scaffold.type.ts
(+100 files in other folders)
